# Qt_Opencv_Study

./: README.md
00_QtCvEnvironmentTest/: QtCvEnvironmentTest.pro  main.cpp  msvc_make.bat
01_LoadAndDisplayAnImage/: 01_LoadAndDisplayAnImage.pro  README.md
02_LoadModifySaveAnImage/: 02_LoadModifySaveAnImage.pro
03_BasicImageContainerMat/: 03_BasicImageContainerMat.pro  README.md  main.cpp
04_scanImages/: main.cpp
05_MaskOperationsOnMatrices/: 05_MaskOperationsOnMatrices.pro  README.md  main.cpp
06_operationsWithImages/: 06_operationsWithImages.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
07_addTwoImages/: 07_addTwoImages.pro  mainwindow.ui
08_ChangeContrastAndBrightnessOfAnImage/: 08_ChangeContrastAndBrightnessOfAnImage.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
09_DiscreteFourierTransform/: 09_DiscreteFourierTransform.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
10_FileInputOutputUsingXMLAndYAML/: 10_FileInputOutputUsingXMLAndYAML.pro  README.md  main.cpp  outputfile.xml  outputfile.yaml
11_UseOpenCV_parallel_for_/: ParallelMandelbrot.cpp  ParallelMandelbrot.h
11_how_to_use_OpenCV_parallel_for_/: 11_how_to_use_OpenCV_parallel_for_.pro  README.md  main.cpp
12_BasicDrawing/: 12_BasicDrawing.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
13_RandomGeneratorAndText/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
14_smoothImages/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
15_erodingDilating/: 15_erodingDilating.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
16_MoreMorphologyTransformations/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
17_Hit-or-Miss/: 17_Hit-or-Miss.pro  README.md  main.cpp  mainwindow.h  mainwindow.ui
18_ExtractHorizontalVerticalLines/: 18_ExtractHorizontalVerticalLines.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
19_ImagePyramids/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtCvEnvironmentTest/: QtCvEnvironmentTest.pro  README.md  main.cpp
QtCvEnvironmentTest/Debug/: .qmake.stash
Qt_Opencv430_learning/: README.md
Qt_Opencv430_learning/00_QtCvEnvironmentTest/: .gitignore  README.md  mainwindow.h
Qt_Opencv430_learning/01_LoadAndDisplayAnImage/: main.cpp
Qt_Opencv430_learning/02_LoadModifySaveAnImage/: main.cpp
Qt_Opencv430_learning/03_BasicImageContainerMat/: README.md
Qt_Opencv430_learning/04_scanImages/: README.md
Qt_Opencv430_learning/05_MaskOperationsOnMatrices/: 05_MaskOperationsOnMatrices.pro
Qt_Opencv430_learning/06_operationsWithImages/: README.md
Qt_Opencv430_learning/06_operationsWithImages/Debug/: .qmake.stash
Qt_Opencv430_learning/07_addTwoImages/: 07_addTwoImages.pro  README.md  mainwindow.cpp  mainwindow.h
Qt_Opencv430_learning/QtCvEnvironmentTest/: QtCvEnvironmentTest.pro
Qt_Opencv430_learning/opencv430ForQtBuild_win64/: opencv430.pri
Qt_Opencv430_learning/opencv430ForQtBuild_win64/install/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
Qt_Opencv430_learning/opencv430ForQtBuild_win64/install/include/opencv2/: cvconfig.h
Qt_Opencv430_learning/opencv430ForQtBuild_win64/install/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake
cvSlam/: opencvTest.cc  testEnvironment.cpp
cvSlam/CmakeTutorials/: README.md
cvSlam/CmakeTutorials/demo1/: CMakeLists.txt  README.md  main.cc
cvSlam/CmakeTutorials/demo2/: CmakeLists.txt  README.md  main.cpp  mathFunctions.cpp  mathFunctions.h
cvSlam/CmakeTutorials/demo3/: CMakeLists.txt  main.cpp
cvSlam/CmakeTutorials/demo3/math/: CMakeLists.txt
cvSlam/CmakeTutorials/demo4/: CMakeLists.txt  README.md  config.h.in  main.cc
cvSlam/CmakeTutorials/demo4/math/: matFunctions.h  mathFunctions.cc
cvSlam/CmakeTutorials/demo5/: CMakeLists.txt  README.md  config.h.in  math.cc
cvSlam/CmakeTutorials/demo5/math/: CMakeLists.txt  mathFunctions.cc  mathFunctions.h
cvSlam/CmakeTutorials/practice1/: CMakeLists.txt
cvSlam/CmakeTutorials/practice2/: CMakeLists.txt  README.md  runHello.sh
cvSlam/CmakeTutorials/practice2/doc/: hello.txt
cvSlam/CmakeTutorials/practice2/src/: CMakeLists.txt  main.cc
cvSlam/CmakeTutorials/practice3/: CMakeLists.txt  README.md
cvSlam/CmakeTutorials/practice3/lib/: CMakeLists.txt  hello.cc
cvSlam/CmakeTutorials/practice4/: CMakeLists.txt  README.md
cvSlam/CmakeTutorials/practice4/lib/: CMakeLists.txt
cvSlam/CmakeTutorials/practice4/src/: CMakeLists.txt  main.cc
cvSlam/CmakeTutorials/practice5/: CMakeLists.txt  README.md
cvSlam/CmakeTutorials/practice5/cmake/: findHello.cmake
cvSlam/CmakeTutorials/practice5/include/: hello.h
cvSlam/CmakeTutorials/practice5/src/: CMakeLists.txt
cvSlam/testEnvironment/: testEnvironment.cpp
oepncv430_MinGW_build/: README.md
opencv430ForQtBuild_win64/: opencv430.pri
opencv430ForQtBuild_win64/include/opencv2/: opencv_modules.hpp
opencv430ForQtBuild_win64/install/x64/mingw/lib/: OpenCVModules.cmake
opencv430_MinGW_build/: opencv430.pri
opencv430_MinGW_build/lib/: OpenCVModules-release.cmake
